# autonomous_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  RAILWAY.md  README.md  RENDER.md  pyproject.toml  render.yaml
src/ai_decision_os/: __init__.py  agent.py  answer.py  benchmark.py  cli.py  config.py  llm.py  mcp_client.py  mcp_server.py  models.py  planner.py  policy.py  scoring.py  strategies.py  web.py  workspace.py
src/ai_decision_os/tools/: __init__.py  browser.py  github.py  memory.py  registry.py  report.py  search.py
src/ai_decision_os/web_static/: app.js  index.html  styles.css
tests/: test_answer.py  test_benchmark.py  test_browser.py  test_github.py  test_mcp_client.py  test_memory.py  test_planner.py  test_report.py  test_search.py
